// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListOptimizer> that optimally renders list items should render full list on maximum height 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:2000px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 0
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 1
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 2
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 3
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 4
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 5
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 6
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 7
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 8
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 9
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 10
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 11
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 12
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 13
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 14
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 15
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 16
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 17
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 18
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 19
      </span>
    </div>
  </div>
</div>
`;

exports[`<ListOptimizer> that optimally renders list items should render part of list items due to middle height of block 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:150px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 0
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 1
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 2
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 3
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 4
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 5
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 6
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 7
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 8
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 9
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 10
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 11
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 12
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 13
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 14
      </span>
    </div>
  </div>
</div>
`;

exports[`<ListOptimizer> that optimally renders list items should render small part of list due to small height of block 1`] = `
<div
  style="overflow:visible;height:0;width:0"
>
  <div
    aria-label="grid"
    aria-readonly="true"
    class="ReactVirtualized__Grid ReactVirtualized__List"
    role="grid"
    style="box-sizing:border-box;direction:ltr;height:10px;position:relative;width:10px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto"
    tabindex="0"
  >
    <div
      class="ReactVirtualized__Grid__innerScrollContainer"
      role="rowgroup"
      style="width:auto;height:600px;max-width:10px;max-height:600px;overflow:hidden;pointer-events:;position:relative"
    >
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 0
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 1
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 2
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 3
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 4
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 5
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 6
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 7
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 8
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 9
      </span>
      <span
        style="height:auto;left:0;position:absolute;top:0;width:100%"
      >
        Item 10
      </span>
    </div>
  </div>
</div>
`;
